side text aligned correctly

--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -79,7 +79,7 @@
 }
 
 .side {
-    padding: 6%;
+
     display: -ms-grid;
     display: grid;
     -ms-grid-column: 1;
@@ -90,12 +90,13 @@
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
 
-    grid-template-rows: .121fr .121fr .121fr .121fr .121fr;
+    grid-template-rows: .125fr .125fr .125fr .125fr .125fr;
     background-color: transparent;
     margin-left: 5%;
     margin-right: 10%;
     z-index: 0;
     line-height: 70%;
+
 }
 
 .text-4 {
@@ -164,6 +165,7 @@
     transform: rotate(-90deg);
     padding: 10%;
     font-size: 2.5vw;
+
 }
 
 .image {
